--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
 	"WOW_current_raids": 3,
 	"WOW_last_raid_id": 39,
 	"WOW_max_level_achievement_id": 10671,
+	"topdesktoken":"OWN TOKEN YESH",
 	"rani": "OWN TOKEN YESH",
 	"arnz": "OWN TOKEN YESH"
   }
