--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
 	"prefix": "!",
 	"token": "OWN TOKEN YESH",
 	"weathertoken": "OWN TOKEN YESH",
-	"version_echelon": "1.2f rc 2021.1",
+	"version_echelon": "1.3a rc 2021.2",
 	"BLIZZARD_API_KEY": "OWN TOKEN YESH",
 	"BLIZZARD_API_SECRET": "OWN TOKEN YESH",
 	"BLIZZARD_API_ACCESS_TOKEN": "",
